--- a/config/jei/ingredient-list-mod-sort-order.ini
+++ b/config/jei/ingredient-list-mod-sort-order.ini
@@ -61,3 +61,12 @@ Upgrade Aquatic
 Waystones
 Moyai
 Advancement Frames
+CoFH Core
+Create
+Create Crafts & Additions
+Create Deco
+Materialis
+Thermal Expansion
+Thermal Locomotion
+Thermal Series
+Tinkers' Construct
