--- a/config/jei/recipe-category-sort-order.ini
+++ b/config/jei/recipe-category-sort-order.ini
@@ -19,3 +19,62 @@ waystones:warp_plate
 enchdesc:compatible_items
 jeed:effects
 pollen:grindstone
+create:automatic_brewing
+create:automatic_packing
+create:automatic_shaped
+create:automatic_shapeless
+create:block_cutting
+create:crushing
+create:deploying
+create:draining
+create:fan_blasting
+create:fan_smoking
+create:fan_washing
+create:mechanical_crafting
+create:milling
+create:mixing
+create:mystery_conversion
+create:packing
+create:pressing
+create:sandpaper_polishing
+create:sawing
+create:sequenced_assembly
+create:spout_filling
+create:wood_cutting
+createaddition:crude_burning
+createaddition:rolling
+tconstruct:alloy
+tconstruct:casting_basin
+tconstruct:casting_table
+tconstruct:entity_melting
+tconstruct:foundry
+tconstruct:melting
+tconstruct:modifiers
+tconstruct:molding
+tconstruct:part_builder
+tconstruct:severing
+thermal:bottler
+thermal:brewer
+thermal:centrifuge
+thermal:chiller
+thermal:compression_fuel
+thermal:crucible
+thermal:disenchantment_fuel
+thermal:furnace
+thermal:gourmand_fuel
+thermal:insolator
+thermal:insolator_catalyst
+thermal:lapidary_fuel
+thermal:magmatic_fuel
+thermal:numismatic_fuel
+thermal:press
+thermal:pulverizer
+thermal:pulverizer_catalyst
+thermal:pyrolyzer
+thermal:refinery
+thermal:rock_gen
+thermal:sawmill
+thermal:smelter
+thermal:smelter_catalyst
+thermal:stirling_fuel
+thermal:tree_extractor
